    FIXED: [ 1681270 ] right clicking pops context menu immediately
    FIXED: [ 1645179 ] shortcut keys are not sent to the terminal
    FIXED: [ 1736496 ] always sort dirs by name not working

     I18N: Updated Hungarian translation
     I18N: Updated French translation (thanks Henry Nicolas)
     I18N: Fixed [ 1725003 ] bad spanish translation
     I18N: Fixed untranslatable strings, patch by Vaclav Juza, thanks


1.80.0-beta2 "Last Unstable Stone"
==================================
    
    ADDED: Terminal Emulator, paste with SHIFT+INSERT and CTRL+V
    ADDED: Vaclav's checksum patches (added sha* tools, fixed bugs etc...)
    ADDED: Synchronizer: ignore hidden files option
    ADDED: Synchronizer-results: drag [left], SHIFT+drag [right],
           Copy left/right selected items to clipboard
    ADDED: Locate-results: dragging items, copy to clipboard (CTRL+C)
    ADDED: Searcher-results: dragging items, copy to clipboard (CTRL+C)
    ADDED: Support for useraction placeholders in Krusader's commandline
           patches by Jiri Palacek and Vaclav Juza, thanks a lot!
    ADDED: New default user action "Backup current"
           http://www.kde-files.org/content/show.php?content=29801
    ADDED: ALT+C as default shortcut for compare directories
    ADDED: Brief view
    ADDED: GUI for configuring the atomic extensions in Konfigurator

  CHANGED: Useractions: much better handling of the Each-placeholder
           patch by Jiri Palacek, thanks!
  CHANGED: Icons in the 3rd hand (preview, quick and view)

    FIXED: [ 1684478 ] buggy configure check for klineedit
    FIXED: Krusader wouldn't start after the "first time wizard" was launched
    FIXED: krarc, problem with application/x-zip-compressed mime
    FIXED: [ 1665209 ] can't see the modified flag (*) if many tabs are used
    FIXED: [ 1678927 ] archive operation - copy to relative path fails
    FIXED: [ 1659215 ] does not Quit when using Mac Menu style