@@ -1,3 +1,4 @@
+    FIXED: [ 1619452 ] Profile doesn't save status of sync-browse mode
     FIXED: [ 1681270 ] right clicking pops context menu immediately
     FIXED: [ 1645179 ] shortcut keys are not sent to the terminal
     FIXED: [ 1736496 ] always sort dirs by name not working
